Fix the alignment of charts to prevent wrapping around the line, to avoid those blank spots
Former-commit-id: 7e3d65d4e9e28488acf7039c53bb971e58e31413

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -29,9 +29,13 @@ $font_sans_serif: sans-serif;
     stroke-opacity: 0.5;
 }
 
+.chart_container .dc-chart {
+    height: 420px;
+}
+
 div.dc-chart {
-    float: left;
     padding-top: 55px;
+    float: left;
 }
 
 .row:nth-child(1) {
